--- a/src/style/style.css
+++ b/src/style/style.css
@@ -5,10 +5,27 @@
 
 body {
     background-color: darkblue;
-    color:darkgray
+    color:darkgray;
+    font-size: larger;
 }
 
+nav {
+    text-align: center;
+}
 
+nav a {
+    text-decoration: none;
+    color: aliceblue;
+    margin: 0px 10px;
+}
+
+header {
+    text-align: center;
+}
+
+h2 {
+    margin: 40px 40px;
+}
 
 #tarjetas {
     justify-content: center;
