--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,17 +1,18 @@
 * {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif,'Courier New', Courier, monospace;
+    font-family:"Archivo Black", sans-serif;
     box-sizing: border-box;
 }
 
 body {
     background-color: darkblue;
-    color:darkgray;
+    color:rgb(0, 234, 255);
     font-size: larger;
+    text-align:center; 
 }
 
-nav {
-    text-align: center;
-}
+/*nav {
+    text-align:center; 
+}*/
 
 nav a {
     text-decoration: none;
@@ -19,22 +20,32 @@ nav a {
     margin: 0px 10px;
 }
 
-header {
+/*header {
     text-align: center;
-}
+}*/
 
 h2 {
     margin: 40px 5%;
+    color: rgb(204, 204, 204);
+}
+
+h3 {
+    color: rgb(162, 162, 162);
+}
+
+p {
+    color: rgb(162, 162, 162);
 }
 
 #tarjetas {
     justify-content: center;
     display: flex;
+    color: darkblue;
 }
 
 .tarjeta{
     background-color:aliceblue;
-    justify-content: center;
+    justify-content: inherit;
     text-align: center;
     width: 450px;
     border: 1px solid rgb(0, 88, 88);
@@ -49,4 +60,15 @@ h2 {
 .tarjeta img {
     width: 100%;
     height: 500px;
+}
+
+#campeonato {
+    border-collapse: collapse;
+    background-color: aliceblue;
+    margin-left: 44%;
+}
+
+#campeonato th, #campeonato td {
+    border: 5px solid black;
+    padding: 5px;
 }
