--- a/src/style/style.css
+++ b/src/style/style.css
@@ -10,9 +10,9 @@ body {
     text-align:center; 
 }
 
-/*nav {
-    text-align:center; 
-}*/
+nav {
+background-color: rgb(0, 7, 60);
+}
 
 nav a {
     text-decoration: none;
@@ -20,9 +20,12 @@ nav a {
     margin: 0px 10px;
 }
 
-/*header {
-    text-align: center;
-}*/
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 h2 {
     margin: 40px 5%;
@@ -34,8 +37,8 @@ div {
 }
 
 #tarjetas {
-    justify-content: center;
     display: flex;  
+    justify-content: space-around;
 }
 
 #tarjetas p {
@@ -56,6 +59,14 @@ div {
     margin: 40px 0px;
 }
 
+#oliver {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 40px;
+}
+
 .tarjeta img {
     width: 100%;
     height: 500px;
@@ -63,17 +74,19 @@ div {
 
 #campeonato {
     border-collapse: collapse;
-    background-color: aliceblue;
-    margin-left: 39%;
+    display: flex;
+    justify-content: center;
 }
 
 #campeonato th, #campeonato td {
+    background-color: aliceblue;
     border: 5px solid black;
     padding: 5px 20px;
 }
 
 #campeonato th {
     color: darkblue;
+    
 }
 
 #campeonato td {
