--- a/src/style/style.css
+++ b/src/style/style.css
@@ -4,14 +4,14 @@
 
 body {
     font-family:"Archivo Black", sans-serif;
-    background-color: darkblue;
-    color:rgb(0, 234, 255);
+    background-color: rgb(0, 9, 76);
+    color:rgb(0, 140, 255);
     font-size: larger;
     text-align:center; 
 }
 
 nav {
-background-color: rgb(0, 7, 60);
+    background-color: rgb(0, 2, 19);
 }
 
 nav a {
@@ -32,7 +32,15 @@ h2 {
     color: rgb(204, 204, 204);
 }
 
-div {
+h3 {
+    color: rgb(0, 140, 255);
+}
+
+p {
+    color: rgb(207, 207, 207);
+}
+
+div, section {
     color: rgb(162, 162, 162);
 }
 
@@ -46,7 +54,7 @@ div {
 }
 
 .tarjeta{
-    background-color:aliceblue;
+    background-color:rgb(214, 214, 214);
     justify-content: inherit;
     text-align: center;
     width: 450px;
@@ -79,7 +87,7 @@ div {
 }
 
 #campeonato th, #campeonato td {
-    background-color: aliceblue;
+    background-color: rgb(214, 214, 214);
     border: 5px solid black;
     padding: 5px 20px;
 }
@@ -91,4 +99,13 @@ div {
 
 #campeonato td {
     color: black;
+}
+
+#autos{
+    display: flex;
+    justify-content: space-around;
+}
+
+#noticias img{
+    height: 200px;
 }
