--- a/src/style/style.css
+++ b/src/style/style.css
@@ -64,10 +64,15 @@ div, section {
     background-color:rgb(214, 214, 214);
     justify-content: inherit;
     text-align: center;
-    width: 450px;
+    width: 360px;
     border: 1px solid rgb(0, 88, 88);
     border-radius: 10px;
     margin: 0px 10px;
+}
+
+.tarjeta img {
+    width: 100%;
+    height: 80%;
 }
 
 #nick, #pascal{
@@ -80,11 +85,6 @@ div, section {
     justify-content: center;
     align-items: center;
     padding-top: 40px;
-}
-
-.tarjeta img {
-    width: 100%;
-    height: 500px;
 }
 
 #campeonato {
