--- a/src/style/style.css
+++ b/src/style/style.css
@@ -4,7 +4,7 @@
 
 body {
     font-family:"Archivo Black", sans-serif;
-    background-color: rgb(0, 9, 76);
+    background-color: rgb(0, 6, 50);
     color:rgb(0, 140, 255);
     font-size: larger;
     text-align:center; 
@@ -21,6 +21,8 @@ nav a {
 }
 
 header {
+    background-color: #00015b;
+    padding: 30px 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,7 +30,7 @@ header {
 }
 
 header img{
-    width: 55rem;
+    width: 60rem;
     /*height: 300px;*/
 }
 
