--- a/src/style/style.css
+++ b/src/style/style.css
@@ -19,6 +19,7 @@ nav {
     width: 100%;
     padding: 0.5em;
     position: fixed;
+    z-index: 1000;
     top: 0%;
     left: 0%;
     right: 0%;
@@ -70,7 +71,8 @@ nav img {
 
 header {
     background-color: #00015b;
-    padding: 30px 0px;
+    padding-bottom: 20px;
+    padding-top: 73px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -204,10 +206,47 @@ div, section {
     background-color:rgb(214, 214, 214);
     cursor: pointer;
     padding: 0.5em 1em;
-    border-radius: 8px;
+    border-radius: 15px;
 }
 
 #cookies button:hover {
     background-color:rgb(125, 125, 125);
     cursor: pointer;
+}
+
+footer {
+    background-color: #00015b;
+    position: absolute;
+    left: 0;
+    right: 0;
+    padding: 24px 16px;
+}
+
+footer ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+footer a {
+    text-decoration: none;
+    color: rgb(0, 166, 255);
+    font-size: 0.85rem;
+}
+
+footer a:hover {
+    color: rgb(0, 76, 255);
+}
+
+.footer-cols {
+    display: flex;
+    gap: 24px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-bottom: 16px;
+}
+
+footer small {
+    font-size: 0.85rem;
+    color: rgb(0, 76, 255);
 }
