Fix: Se arregla header en pantallas pequeñas

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -447,6 +447,7 @@ footer small {
         width: 100%;
         padding: 0 10px;
         overflow: hidden;
+        margin-top: 73px;
     }
 
     header img {
