--- a/src/style/style.css
+++ b/src/style/style.css
@@ -74,10 +74,11 @@ nav {
 .burger {
     display: block;
     width: 18px;
-    height: 2px;
+    height: 3.1px;
     margin: 0 auto;
-    background: rgb(0, 140, 255);
+    background: aliceblue;
     position: relative;
+    border-radius: 8px;
 }
 
 .burger::before {
@@ -127,7 +128,8 @@ nav {
     width: 44px;
     height: 44px;
     border-radius: 12px;
-    border: 1px solid rgb(0, 76, 255);
+    border: 2px solid aliceblue;
+    background-color: rgba(0, 2, 19,.06);
     cursor: pointer;
 }
 
